--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
     "postcss-loader": "^3.0.0",
     "sass-loader": "^7.1.0",
     "webpack": "^3.12.0",
-    "webpack-dev-server": "^3.1.10"
+    "webpack-dev-server": "^2.11.3"
   },
   "scripts": {
     "build": "webpack -p",
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server --host 0.0.0.0"
   },
   "repository": {
     "type": "git",
