--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Troop 370 Atlanta",
   "short_name": "Troop 370",
-  "theme_color": "#134885",
+  "theme_color": "#003f87",
   "background_color": "#003f87",
   "display": "standalone",
   "scope": "/",
