--- a/package.json
+++ b/package.json
@@ -3,35 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "service-worker.js",
-  "dependencies": {
-    "@material/floating-label": "^0.42.0",
-    "@material/line-ripple": "^0.41.0",
-    "@material/list": "^0.42.0",
-    "@material/notched-outline": "^0.42.0",
-    "@material/snackbar": "^0.44.0",
-    "@material/textfield": "^0.42.0"
-  },
-  "devDependencies": {
-    "@material/button": "^0.42.0",
-    "@material/ripple": "^0.42.0",
-    "autoprefixer": "^9.4.2",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "babel-plugin-transform-object-assign": "^6.22.0",
-    "babel-preset-es2015": "^6.24.1",
-    "css-loader": "^2.0.0",
-    "extract-loader": "^3.1.0",
-    "file-loader": "^2.0.0",
-    "node-sass": "^4.11.0",
-    "postcss-loader": "^3.0.0",
-    "sass-loader": "^7.1.0",
-    "webpack": "^3.12.0",
-    "webpack-dev-server": "^2.11.3"
-  },
-  "scripts": {
-    "build": "webpack -p",
-    "start": "webpack-dev-server --host 0.0.0.0"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/troop-370/troop370.git"
@@ -41,5 +12,20 @@
   "bugs": {
     "url": "https://github.com/troop-370/troop370/issues"
   },
-  "homepage": "https://github.com/troop-370/troop370#readme"
+  "homepage": "https://github.com/troop-370/troop370#readme",
+  "dependencies": {
+    "@material/button": "^1.1.1",
+    "@material/card": "^1.1.1",
+    "@material/checkbox": "^1.1.0",
+    "@material/elevation": "^1.1.0",
+    "@material/floating-label": "^1.1.0",
+    "@material/form-field": "^1.1.0",
+    "@material/icon-button": "^1.1.0",
+    "@material/radio": "^1.1.0",
+    "@material/ripple": "^1.1.0",
+    "@material/snackbar": "^1.1.1",
+    "@material/textfield": "^1.1.1",
+    "@material/theme": "^1.1.0",
+    "@material/typography": "^1.0.0"
+  }
 }
