--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "Troop 370 Atlanta",
   "short_name": "Troop 370",
   "theme_color": "#003f87",
-  "background_color": "#003f87",
+  "background_color": "#ffffff",
   "display": "standalone",
   "scope": "/",
   "start_url": "./index.html?utm_source=homescreen",
