--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,15 @@ language: ruby
 rvm:
   - 2.5.2
 
+before_install:
+  - npm install
+
 before_script:
- - chmod +x ./script/cibuild # or do this locally and commit
+ - chmod +x ./js/cibuild # or do this locally and commit
 
 # Assume bundler is being used, therefore
 # the `install` step will run `bundle install` by default.
-script: ./script/cibuild
+script: ./js/cibuild
 
 # branch whitelist, only for GitHub Pages
 #branches:
@@ -26,7 +29,8 @@ addons:
 
 sudo: false # route your build to the container-based infrastructure for a faster build
 
-cache: bundler # caching bundler gem packages will speed up build
+cache:
+  bundler: true # caching bundler gem packages will speed up build
 
 # Optional: disable email notifications about the outcome of your builds
 notifications:
@@ -39,4 +43,4 @@ deploy:
   github_token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
   target-branch: gh-pages
   on:
-    branch: master
+    branch: rewrite
