--- a/.travis.yml
+++ b/.travis.yml
@@ -43,4 +43,4 @@ deploy:
   github_token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
   target-branch: gh-pages
   on:
-    branch: rewrite
+    branch: master
