--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,8 @@ collections:
     output: true
   events:
     output: true
+  members:
+    output: true
   contact:
     output: true
     permalink: /:path
