move photos page to photos category

--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,9 @@ collections:
     output: true
   members:
     output: true
+  photos:
+    output: true
+    permalink: /:path
   contact:
     output: true
     permalink: /:path
