--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@material/icon-button": "^1.1.0",
     "@material/radio": "^1.1.0",
     "@material/ripple": "^1.1.0",
+    "@material/select": "^3.2.0",
     "@material/snackbar": "^1.1.1",
     "@material/tab-bar": "^3.1.0",
     "@material/textfield": "^1.1.1",
