configure kramdown markdown to parse markdown inside html block tags

--- a/_config.yml
+++ b/_config.yml
@@ -42,3 +42,7 @@ collections:
     output: true
     permalink: /pay/:path.html
 collections_dir: _collections
+markdown: kramdown
+kramdown:
+    parse_block_html: true
+    input: GFM
