--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier --plugin-search-dir . --check . && eslint .",
-    "format": "prettier --plugin-search-dir . --write ."
+    "format": "prettier --plugin-search-dir . --write .",
+    "prepare": "npm run smui-theme",
+    "smui-theme": "smui-theme compile static/smui.css -i src/theme"
   },
   "devDependencies": {
+    "@smui/button": "^7.0.0-beta.0",
+    "@smui/ripple": "^7.0.0-beta.0",
     "@sveltejs/adapter-auto": "next",
     "@sveltejs/kit": "next",
     "@types/marked": "^4.0.7",
@@ -25,6 +29,7 @@
     "houdini-svelte": "^0.17.8",
     "prettier": "^2.6.2",
     "prettier-plugin-svelte": "^2.7.0",
+    "smui-theme": "^7.0.0-beta.0",
     "svelte": "^3.44.0",
     "svelte-check": "^2.7.1",
     "svelte-preprocess": "^4.10.6",
