--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "smui-theme": "smui-theme compile static/smui.css -i src/theme"
   },
   "devDependencies": {
+    "@smui-extra/accordion": "^7.0.0-beta.0",
     "@smui/button": "^7.0.0-beta.0",
+    "@smui/drawer": "^7.0.0-beta.0",
+    "@smui/icon-button": "^7.0.0-beta.0",
+    "@smui/list": "^7.0.0-beta.0",
     "@smui/ripple": "^7.0.0-beta.0",
     "@smui/textfield": "^7.0.0-beta.0",
     "@sveltejs/adapter-auto": "next",
