--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@smui/textfield": "^7.0.0-beta.0",
     "@sveltejs/adapter-auto": "next",
     "@sveltejs/kit": "next",
+    "@types/luxon": "^3.1.0",
     "@types/marked": "^4.0.7",
+    "@types/xmldom": "^0.1.31",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
     "eslint": "^8.16.0",
@@ -44,7 +46,10 @@
   },
   "type": "module",
   "dependencies": {
+    "@cristata/prosemirror-to-html-js": "^2.5.0",
+    "luxon": "^3.1.0",
     "marked": "^4.2.2",
-    "svelte-kit-cookie-session": "^3.2.2"
+    "svelte-kit-cookie-session": "^3.2.2",
+    "xmldom": "^0.6.0"
   }
 }
