--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@smui-extra/accordion": "^7.0.0-beta.0",
     "@smui/button": "^7.0.0-beta.0",
+    "@smui/card": "^7.0.0-beta.0",
     "@smui/checkbox": "^7.0.0-beta.0",
     "@smui/drawer": "^7.0.0-beta.0",
     "@smui/form-field": "^7.0.0-beta.0",
