--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@sveltejs/kit": "next",
     "@types/luxon": "^3.1.0",
     "@types/marked": "^4.0.7",
+    "@types/mime-types": "^2.1.1",
     "@types/xmldom": "^0.1.31",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
