--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@smui/textfield": "^7.0.0-beta.0",
     "@sveltejs/adapter-auto": "next",
     "@sveltejs/kit": "next",
+    "@types/flickity": "^2.2.7",
     "@types/luxon": "^3.1.0",
     "@types/marked": "^4.0.7",
     "@types/mime-types": "^2.1.1",
