--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/luxon": "^3.1.0",
     "@types/marked": "^4.0.7",
     "@types/mime-types": "^2.1.1",
+    "@types/nprogress": "^0.2.0",
     "@types/xmldom": "^0.1.31",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
@@ -58,6 +59,7 @@
     "css-inliner": "^2.0.0",
     "luxon": "^3.1.0",
     "marked": "^4.2.2",
+    "nprogress": "^0.2.0",
     "svelte-kit-cookie-session": "^3.2.2",
     "xmldom": "^0.6.0",
     "zod": "^3.19.1"
