--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "@smui/tab": "^7.0.0-beta.0",
     "@smui/tab-bar": "^7.0.0-beta.0",
     "@smui/textfield": "^7.0.0-beta.0",
-    "@sveltejs/adapter-auto": "next",
-    "@sveltejs/kit": "next",
+    "@sveltejs/adapter-auto": "2.0.0",
+    "@sveltejs/kit": "1.14.0",
     "@types/flickity": "^2.2.7",
     "@types/luxon": "^3.1.0",
     "@types/marked": "^4.0.7",
@@ -51,7 +51,7 @@
     "svelte-preprocess": "^4.10.6",
     "tslib": "^2.3.1",
     "typescript": "^4.7.4",
-    "vite": "^3.1.0"
+    "vite": "^4.0.0"
   },
   "type": "module",
   "dependencies": {
