--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@smui/tab": "^7.0.0-beta.0",
     "@smui/tab-bar": "^7.0.0-beta.0",
     "@smui/textfield": "^7.0.0-beta.0",
-    "@sveltejs/adapter-auto": "2.0.0",
+    "@sveltejs/adapter-vercel": "^2.4.1",
     "@sveltejs/kit": "1.14.0",
     "@types/flickity": "^2.2.7",
     "@types/luxon": "^3.1.0",
@@ -41,8 +41,8 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-svelte3": "^4.0.0",
     "graphql": "^15.8.0",
-    "houdini": "^0.17.8",
-    "houdini-svelte": "^0.17.8",
+    "houdini": "^1.1.3",
+    "houdini-svelte": "^1.1.3",
     "prettier": "^2.6.2",
     "prettier-plugin-svelte": "^2.7.0",
     "smui-theme": "^7.0.0-beta.0",
