--- a/package.json
+++ b/package.json
@@ -27,8 +27,9 @@
     "@smui/tab": "^7.0.0-beta.0",
     "@smui/tab-bar": "^7.0.0-beta.0",
     "@smui/textfield": "^7.0.0-beta.0",
-    "@sveltejs/adapter-auto": "next",
-    "@sveltejs/kit": "next",
+    "@sveltejs/adapter-auto": "^2.1.1",
+    "@sveltejs/kit": "^1.0.0",
+    "@tsconfig/svelte": "^5.0.2",
     "@types/flickity": "^2.2.7",
     "@types/luxon": "^3.1.0",
     "@types/marked": "^4.0.7",
@@ -41,20 +42,21 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-svelte3": "^4.0.0",
     "graphql": "^15.8.0",
-    "houdini": "^0.17.8",
-    "houdini-svelte": "^0.17.8",
+    "houdini": "^0.18.0",
+    "houdini-svelte": "^0.18.0",
     "prettier": "^2.6.2",
     "prettier-plugin-svelte": "^2.7.0",
     "smui-theme": "^7.0.0-beta.0",
     "svelte": "^3.44.0",
     "svelte-check": "^2.7.1",
-    "svelte-preprocess": "^4.10.6",
+    "svelte-preprocess": "^5.0.0",
     "tslib": "^2.3.1",
-    "typescript": "^4.7.4",
-    "vite": "^3.1.0"
+    "typescript": "^5.0.0",
+    "vite": "^4.1.0"
   },
   "type": "module",
   "dependencies": {
+    "@cocreators-ee/apity": "^0.0.5",
     "@cristata/prosemirror-to-html-js": "^3.1.0",
     "css-inliner": "^2.0.0",
     "luxon": "^3.1.0",
