--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
   "dependencies": {
     "@cocreators-ee/apity": "^0.0.5",
     "@cristata/prosemirror-to-html-js": "^3.1.0",
+    "blocks-html-renderer": "^1.0.4",
     "css-inliner": "^2.0.0",
     "luxon": "^3.1.0",
     "marked": "^4.2.2",
