--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,9 @@
     "skipLibCheck": true,
     "sourceMap": true,
     "strict": true,
-    "rootDirs": [".", "./.svelte-kit/types", "./$houdini/types"]
+    "rootDirs": [
+      ".",
+      "./.svelte-kit/types"
+    ]
   }
 }
