--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "postinstall": "patch-package"
   },
   "devDependencies": {
+    "@aws-sdk/client-s3": "^3.513.0",
+    "@aws-sdk/s3-request-presigner": "^3.513.0",
     "@smui-extra/accordion": "^7.0.0-beta.0",
     "@smui/button": "^7.0.0-beta.0",
     "@smui/card": "^7.0.0-beta.0",
