feat: integrate strapi at /admin with a reverse proxy

--- a/package.json
+++ b/package.json
@@ -59,11 +59,15 @@
   "dependencies": {
     "@cocreators-ee/apity": "^0.0.5",
     "@cristata/prosemirror-to-html-js": "^3.1.0",
+    "@fluentui/svg-icons": "1.1.192",
     "blocks-html-renderer": "^1.0.4",
+    "color": "^4.2.3",
     "css-inliner": "^2.0.0",
+    "fluent-svelte": "^1.6.0",
     "luxon": "^3.1.0",
     "marked": "^4.2.2",
     "nprogress": "^0.2.0",
+    "object-to-css-variables": "^0.2.1",
     "patch-package": "^8.0.0",
     "rrule": "^2.7.1",
     "svelte-kit-cookie-session": "^3.2.2",
