--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "color": "^4.2.3",
     "css-inliner": "^2.0.0",
     "fluent-svelte": "^1.6.0",
+    "jwt-decode": "^4.0.0",
     "luxon": "^3.1.0",
     "marked": "^4.2.2",
     "nprogress": "^0.2.0",
