feat: add custom collection table page

--- a/package.json
+++ b/package.json
@@ -33,11 +33,13 @@
     "@sveltejs/adapter-auto": "^2.1.1",
     "@sveltejs/kit": "^1.0.0",
     "@tsconfig/svelte": "^5.0.2",
+    "@types/color-hash": "^1.0.5",
     "@types/flickity": "^2.2.7",
     "@types/luxon": "^3.1.0",
     "@types/marked": "^4.0.7",
     "@types/mime-types": "^2.1.1",
     "@types/nprogress": "^0.2.0",
+    "@types/qs": "^6.9.11",
     "@types/xmldom": "^0.1.31",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
@@ -60,9 +62,12 @@
     "@cocreators-ee/apity": "^0.0.5",
     "@cristata/prosemirror-to-html-js": "^3.1.0",
     "@fluentui/svg-icons": "1.1.192",
+    "@tanstack/svelte-table": "8.7.9",
     "blocks-html-renderer": "^1.0.4",
     "color": "^4.2.3",
+    "color-hash": "^2.0.2",
     "css-inliner": "^2.0.0",
+    "flatten-anything": "^3.0.5",
     "fluent-svelte": "^1.6.0",
     "jwt-decode": "^4.0.0",
     "luxon": "^3.1.0",
@@ -70,6 +75,7 @@
     "nprogress": "^0.2.0",
     "object-to-css-variables": "^0.2.1",
     "patch-package": "^8.0.0",
+    "qs": "^6.11.2",
     "rrule": "^2.7.1",
     "svelte-kit-cookie-session": "^3.2.2",
     "xmldom": "^0.6.0",
