feat(store): add order page for ecwid store orders

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@sveltejs/kit": "^1.0.0",
     "@tsconfig/svelte": "^5.0.2",
     "@types/color-hash": "^1.0.5",
+    "@types/dompurify": "^3.0.5",
     "@types/flickity": "^2.2.7",
     "@types/luxon": "^3.1.0",
     "@types/marked": "^4.0.7",
@@ -68,6 +69,7 @@
     "color": "^4.2.3",
     "color-hash": "^2.0.2",
     "css-inliner": "^2.0.0",
+    "dompurify": "^3.0.9",
     "flatten-anything": "^3.0.5",
     "fluent-svelte": "^1.6.0",
     "jwt-decode": "^4.0.0",
