--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/marked": "^4.0.7",
     "@types/mime-types": "^2.1.1",
     "@types/nprogress": "^0.2.0",
+    "@types/object-path": "^0.11.4",
     "@types/qs": "^6.9.11",
     "@types/xmldom": "^0.1.31",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
@@ -76,6 +77,7 @@
     "luxon": "^3.1.0",
     "marked": "^4.2.2",
     "nprogress": "^0.2.0",
+    "object-path": "^0.11.8",
     "object-to-css-variables": "^0.2.1",
     "patch-package": "^8.0.0",
     "qs": "^6.11.2",
