--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/color-hash": "^1.0.5",
     "@types/dompurify": "^3.0.5",
     "@types/flickity": "^2.2.7",
+    "@types/less": "^3.0.6",
     "@types/luxon": "^3.1.0",
     "@types/marked": "^4.0.7",
     "@types/mime-types": "^2.1.1",
@@ -76,6 +77,7 @@
     "flatten-anything": "^3.0.5",
     "fluent-svelte": "^1.6.0",
     "jwt-decode": "^4.0.0",
+    "less": "^4.2.0",
     "luxon": "^3.1.0",
     "marked": "^4.2.2",
     "nprogress": "^0.2.0",
@@ -84,7 +86,9 @@
     "patch-package": "^8.0.0",
     "qs": "^6.11.2",
     "rrule": "^2.7.1",
+    "slate": "^0.102.0",
     "svelte-kit-cookie-session": "^3.2.2",
+    "svelte-slate": "^0.1.83",
     "xmldom": "^0.6.0",
     "zod": "^3.19.1"
   }
