feat: add Tiptap editor

--- a/package.json
+++ b/package.json
@@ -32,10 +32,30 @@
     "@smui/textfield": "^7.0.0-beta.0",
     "@sveltejs/adapter-auto": "^2.1.1",
     "@sveltejs/kit": "^1.0.0",
+    "@tiptap/core": "^2.0.3",
+    "@tiptap/extension-bubble-menu": "^2.0.3",
+    "@tiptap/extension-character-count": "^2.0.4",
+    "@tiptap/extension-collaboration": "^2.0.3",
+    "@tiptap/extension-collaboration-cursor": "^2.0.3",
+    "@tiptap/extension-floating-menu": "^2.1.8",
+    "@tiptap/extension-font-family": "^2.0.3",
+    "@tiptap/extension-link": "^2.0.3",
+    "@tiptap/extension-placeholder": "^2.0.3",
+    "@tiptap/extension-table": "^2.0.3",
+    "@tiptap/extension-table-cell": "^2.0.3",
+    "@tiptap/extension-table-header": "^2.0.3",
+    "@tiptap/extension-table-row": "^2.0.3",
+    "@tiptap/extension-text-style": "^2.0.3",
+    "@tiptap/extension-underline": "^2.0.3",
+    "@tiptap/pm": "^2.0.3",
+    "@tiptap/starter-kit": "^2.0.3",
     "@tsconfig/svelte": "^5.0.2",
+    "@types/color": "^3.0.6",
     "@types/color-hash": "^1.0.5",
+    "@types/deep-equal": "^1.0.4",
     "@types/dompurify": "^3.0.5",
     "@types/flickity": "^2.2.7",
+    "@types/iframe-resizer": "^3.5.13",
     "@types/less": "^3.0.6",
     "@types/luxon": "^3.1.0",
     "@types/marked": "^4.0.7",
@@ -43,7 +63,9 @@
     "@types/nprogress": "^0.2.0",
     "@types/object-path": "^0.11.4",
     "@types/qs": "^6.9.11",
+    "@types/uuid": "^9.0.8",
     "@types/xmldom": "^0.1.31",
+    "@types/youtube-player": "^5.5.11",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
     "eslint": "^8.16.0",
@@ -56,26 +78,32 @@
     "svelte": "^3.44.0",
     "svelte-check": "^2.7.1",
     "svelte-preprocess": "^5.0.0",
+    "svelte-tiptap": "^0.7.0",
     "tslib": "^2.3.1",
     "typescript": "^5.0.0",
-    "vite": "^4.1.0"
+    "vite": "^4.1.0",
+    "youtube-player": "^5.6.0"
   },
   "type": "module",
   "dependencies": {
     "@cocreators-ee/apity": "^0.0.5",
     "@cristata/prosemirror-to-html-js": "^3.1.0",
     "@fluentui/svg-icons": "1.1.192",
+    "@hocuspocus/provider": "^1.1.3",
     "@iwsio/json-csv-core": "^1.1.4",
     "@tanstack/svelte-table": "8.7.9",
+    "awesome-debounce-promise": "^2.1.0",
     "blocks-html-renderer": "^1.0.4",
     "color": "^4.2.3",
     "color-hash": "^2.0.2",
     "copy-anything": "^3.0.5",
     "css-inliner": "^2.0.0",
     "csv-to-js-parser": "^2.3.5",
+    "deep-equal": "^2.2.3",
     "dompurify": "^3.0.9",
     "flatten-anything": "^3.0.5",
     "fluent-svelte": "^1.6.0",
+    "iframe-resizer": "^4.3.9",
     "jwt-decode": "^4.0.0",
     "less": "^4.2.0",
     "luxon": "^3.1.0",
@@ -86,8 +114,12 @@
     "patch-package": "^8.0.0",
     "qs": "^6.11.2",
     "rrule": "^2.7.1",
+    "scroll-into-view-if-needed": "^2.2.31",
     "svelte-kit-cookie-session": "^3.2.2",
+    "uuid": "^9.0.1",
     "xmldom": "^0.6.0",
+    "y-webrtc": "^10.2.3",
+    "yjs": "^13.5.41",
     "zod": "^3.19.1"
   }
 }
