--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@types/dompurify": "^3.0.5",
     "@types/flickity": "^2.2.7",
     "@types/iframe-resizer": "^3.5.13",
+    "@types/jsdom": "^21.1.6",
     "@types/less": "^3.0.6",
     "@types/luxon": "^3.1.0",
     "@types/marked": "^4.0.7",
@@ -81,7 +82,7 @@
     "svelte-tiptap": "^0.7.0",
     "tslib": "^2.3.1",
     "typescript": "^5.0.0",
-    "vite": "^4.1.0",
+    "vite": "^4.5.2",
     "youtube-player": "^5.6.0"
   },
   "type": "module",
@@ -104,6 +105,7 @@
     "flatten-anything": "^3.0.5",
     "fluent-svelte": "^1.6.0",
     "iframe-resizer": "^4.3.9",
+    "jsdom": "^24.0.0",
     "jwt-decode": "^4.0.0",
     "less": "^4.2.0",
     "luxon": "^3.1.0",
@@ -117,6 +119,7 @@
     "scroll-into-view-if-needed": "^2.2.31",
     "svelte-kit-cookie-session": "^3.2.2",
     "uuid": "^9.0.1",
+    "vite-plugin-node-polyfills": "^0.21.0",
     "xmldom": "^0.6.0",
     "y-webrtc": "^10.2.3",
     "yjs": "^13.5.41",
