--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "@hocuspocus/provider": "^1.1.3",
     "@iwsio/json-csv-core": "^1.1.4",
     "@tanstack/svelte-table": "8.7.9",
+    "array-differences": "^1.3.0",
     "awesome-debounce-promise": "^2.1.0",
     "blocks-html-renderer": "^1.0.4",
     "color": "^4.2.3",
@@ -110,6 +111,7 @@
     "less": "^4.2.0",
     "luxon": "^3.1.0",
     "marked": "^4.2.2",
+    "mongoose": "^8.2.2",
     "nprogress": "^0.2.0",
     "object-path": "^0.11.8",
     "object-to-css-variables": "^0.2.1",
@@ -117,6 +119,7 @@
     "qs": "^6.11.2",
     "rrule": "^2.7.1",
     "scroll-into-view-if-needed": "^2.2.31",
+    "svelte-dnd-action": "^0.9.40",
     "svelte-kit-cookie-session": "^3.2.2",
     "uuid": "^9.0.1",
     "vite-plugin-node-polyfills": "^0.21.0",
