build: upgrade to sveltekit 2 and install shadcn-svelte

--- a/.prettierrc
+++ b/.prettierrc
@@ -15,14 +15,26 @@
   "svelteSortOrder": "options-scripts-markup-styles",
   "bracketSameLine": false,
   "svelteIndentScriptAndStyle": true,
-  "plugins": ["prettier-plugin-svelte"],
-  "pluginSearchDirs": ["."],
+  "plugins": [
+
+    "prettier-plugin-svelte",
+
+    "prettier-plugin-tailwindcss"
+
+  ],
+  "pluginSearchDirs": [
+
+    "."
+
+  ],
   "overrides": [
+
     {
       "files": "*.svelte",
       "options": {
         "parser": "svelte"
       }
     }
+
   ]
 }
