--- a/package.json
+++ b/package.json
@@ -17,21 +17,22 @@
   "devDependencies": {
     "@aws-sdk/client-s3": "^3.513.0",
     "@aws-sdk/s3-request-presigner": "^3.513.0",
-    "@smui-extra/accordion": "^7.0.0-beta.0",
-    "@smui/button": "^7.0.0-beta.0",
-    "@smui/card": "^7.0.0-beta.0",
-    "@smui/checkbox": "^7.0.0-beta.0",
-    "@smui/drawer": "^7.0.0-beta.0",
-    "@smui/form-field": "^7.0.0-beta.0",
-    "@smui/icon-button": "^7.0.0-beta.0",
-    "@smui/list": "^7.0.0-beta.0",
-    "@smui/ripple": "^7.0.0-beta.0",
-    "@smui/select": "^7.0.0-beta.0",
-    "@smui/tab": "^7.0.0-beta.0",
-    "@smui/tab-bar": "^7.0.0-beta.0",
-    "@smui/textfield": "^7.0.0-beta.0",
-    "@sveltejs/adapter-auto": "^2.1.1",
-    "@sveltejs/kit": "^1.0.0",
+    "@smui-extra/accordion": "^7.0.0",
+    "@smui/button": "^7.0.0",
+    "@smui/card": "^7.0.0",
+    "@smui/checkbox": "^7.0.0",
+    "@smui/drawer": "^7.0.0",
+    "@smui/form-field": "^7.0.0",
+    "@smui/icon-button": "^7.0.0",
+    "@smui/list": "^7.0.0",
+    "@smui/ripple": "^7.0.0",
+    "@smui/select": "^7.0.0",
+    "@smui/tab": "^7.0.0",
+    "@smui/tab-bar": "^7.0.0",
+    "@smui/textfield": "^7.0.0",
+    "@sveltejs/adapter-auto": "^3.0.0",
+    "@sveltejs/kit": "^2.0.0",
+    "@sveltejs/vite-plugin-svelte": "^3.0.0",
     "@tsconfig/svelte": "^5.0.2",
     "@types/color-hash": "^1.0.5",
     "@types/dompurify": "^3.0.5",
@@ -45,19 +46,21 @@
     "@types/xmldom": "^0.1.31",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8.16.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-svelte3": "^4.0.0",
     "graphql": "^15.8.0",
-    "prettier": "^2.6.2",
-    "prettier-plugin-svelte": "^2.7.0",
-    "smui-theme": "^7.0.0-beta.0",
-    "svelte": "^3.44.0",
-    "svelte-check": "^2.7.1",
-    "svelte-preprocess": "^5.0.0",
+    "prettier": "^3.3.3",
+    "prettier-plugin-svelte": "^3.2.6",
+    "prettier-plugin-tailwindcss": "^0.6.5",
+    "smui-theme": "^7.0.0",
+    "svelte": "^4.0.0",
+    "svelte-check": "^3.4.3",
+    "svelte-preprocess": "^5.0.3",
+    "tailwindcss": "^3.4.9",
     "tslib": "^2.3.1",
     "typescript": "^5.0.0",
-    "vite": "^4.1.0"
+    "vite": "^5.0.0"
   },
   "type": "module",
   "dependencies": {
@@ -65,14 +68,16 @@
     "@cristata/prosemirror-to-html-js": "^3.1.0",
     "@fluentui/svg-icons": "1.1.192",
     "@iwsio/json-csv-core": "^1.1.4",
-    "@tanstack/svelte-table": "8.7.9",
+    "@tanstack/svelte-table": "^8.20.5",
     "blocks-html-renderer": "^1.0.4",
+    "clsx": "^2.1.1",
     "color": "^4.2.3",
     "color-hash": "^2.0.2",
     "copy-anything": "^3.0.5",
     "css-inliner": "^2.0.0",
     "csv-to-js-parser": "^2.3.5",
     "dompurify": "^3.0.9",
+    "eslint-plugin-svelte": "^2.43.0",
     "flatten-anything": "^3.0.5",
     "fluent-svelte": "^1.6.0",
     "jwt-decode": "^4.0.0",
@@ -85,6 +90,8 @@
     "qs": "^6.11.2",
     "rrule": "^2.7.1",
     "svelte-kit-cookie-session": "^3.2.2",
+    "tailwind-merge": "^2.5.2",
+    "tailwind-variants": "^0.2.1",
     "xmldom": "^0.6.0",
     "zod": "^3.19.1"
   }
