feat: add work-in-progress checkout ui flow

--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "eslint-plugin-svelte": "^2.43.0",
     "flatten-anything": "^3.0.5",
     "fluent-svelte": "^1.6.0",
+    "formsnap": "^1.0.1",
     "jwt-decode": "^4.0.0",
     "lucide-svelte": "^0.439.0",
     "luxon": "^3.1.0",
@@ -93,10 +94,13 @@
     "rrule": "^2.7.1",
     "svelte-kit-cookie-session": "^3.2.2",
     "svelte-legos": "^0.2.5",
+    "sveltekit-superforms": "^2.17.0",
     "tailwind-merge": "^2.5.2",
     "tailwind-variants": "^0.2.1",
+    "validator": "^13.12.0",
     "vaul-svelte": "^0.3.2",
     "xmldom": "^0.6.0",
-    "zod": "^3.19.1"
+    "zod": "^3.23.8",
+    "zod-validation-error": "^3.3.1"
   }
 }
