--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "format": "prettier --plugin-search-dir . --write .",
     "prepare": "npm run smui-theme",
     "smui-theme": "smui-theme compile static/smui.css -i src/theme",
-    "postinstall": "patch-package"
+    "postinstall": "patch-package",
+    "openapi": "npx openapi-typescript@6 http://localhost:370/strapi/api/openapi.json --output src/api/types.ts"
   },
   "devDependencies": {
     "@aws-sdk/client-s3": "^3.513.0",
