feat(admin): add overview page that shows all schema/settings details for a specific content type

--- a/package.json
+++ b/package.json
@@ -77,9 +77,11 @@
     "eslint-plugin-svelte": "^2.43.0",
     "flatten-anything": "^3.0.5",
     "fluent-svelte": "^1.6.0",
+    "is-what": "^5.0.2",
     "jwt-decode": "^4.0.0",
     "luxon": "^3.1.0",
     "marked": "^4.2.2",
+    "merge-anything": "^6.0.2",
     "nprogress": "^0.2.0",
     "object-path": "^0.11.8",
     "object-to-css-variables": "^0.2.1",
