--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "eslint": "^8.16.0",
     "eslint-config-prettier": "^8.3.0",
     "graphql": "^15.8.0",
+    "mongoose": "^8.8.1",
     "prettier": "^3.3.3",
     "prettier-plugin-svelte": "^3.2.6",
     "smui-theme": "^7.0.0",
@@ -67,6 +68,8 @@
     "@fluentui/svg-icons": "1.1.192",
     "@iwsio/json-csv-core": "^1.1.4",
     "@tanstack/svelte-table": "^8.20.5",
+    "array-differences": "^3.0.2",
+    "awesome-debounce-promise": "^2.1.0",
     "blocks-html-renderer": "^1.0.4",
     "color": "^4.2.3",
     "color-hash": "^2.0.2",
@@ -88,6 +91,7 @@
     "patch-package": "^8.0.0",
     "qs": "^6.11.2",
     "rrule": "^2.7.1",
+    "svelte-dnd-action": "^0.9.52",
     "svelte-kit-cookie-session": "^3.2.2",
     "undici": "^6.19.8",
     "xmldom": "^0.6.0",
