--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "svelte-preprocess": "^5.0.3",
     "tslib": "^2.3.1",
     "typescript": "^5.0.0",
+    "uuid": "^11.0.3",
     "vite": "^5.0.0"
   },
   "type": "module",
