feat(admin, editor): add markdown/richtext field support

--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@cristata/prosemirror-to-html-js": "^3.1.0",
     "@fluentui/svg-icons": "1.1.192",
     "@iwsio/json-csv-core": "^1.1.4",
+    "@monaco-editor/loader": "^1.4.0",
     "@tanstack/svelte-table": "^8.20.5",
     "array-differences": "^3.0.2",
     "awesome-debounce-promise": "^2.1.0",
@@ -86,15 +87,20 @@
     "luxon": "^3.1.0",
     "marked": "^4.2.2",
     "merge-anything": "^6.0.2",
+    "monaco-editor": "^0.52.0",
     "nprogress": "^0.2.0",
     "object-path": "^0.11.8",
     "object-to-css-variables": "^0.2.1",
     "patch-package": "^8.0.0",
     "qs": "^6.11.2",
+    "rehype-stringify": "^10.0.1",
+    "remark-parse": "^11.0.0",
+    "remark-rehype": "^11.1.1",
     "rrule": "^2.7.1",
     "svelte-dnd-action": "^0.9.52",
     "svelte-kit-cookie-session": "^3.2.2",
     "undici": "^6.19.8",
+    "unified": "^11.0.5",
     "xmldom": "^0.6.0",
     "zod": "^3.19.1"
   }
