feat(admin, editor): add ability to publish documents

--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
     "@tsconfig/svelte": "^5.0.2",
     "@types/color-hash": "^1.0.5",
-    "@types/dompurify": "^3.0.5",
     "@types/flickity": "^2.2.7",
     "@types/luxon": "^3.1.0",
     "@types/marked": "^4.0.7",
@@ -78,11 +77,11 @@
     "copy-anything": "^3.0.5",
     "css-inliner": "^2.0.0",
     "csv-to-js-parser": "^2.3.5",
-    "dompurify": "^3.0.9",
     "eslint-plugin-svelte": "^2.43.0",
     "flatten-anything": "^3.0.5",
     "fluent-svelte": "^1.6.0",
     "is-what": "^5.0.2",
+    "isomorphic-dompurify": "2.16.0",
     "jwt-decode": "^4.0.0",
     "luxon": "^3.1.0",
     "marked": "^4.2.2",
