--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "@tsconfig/svelte": "^5.0.2",
     "@types/color-hash": "^1.0.5",
     "@types/flickity": "^2.2.7",
+    "@types/iframe-resizer": "^3.5.13",
+    "@types/less": "^3.0.7",
     "@types/luxon": "^3.1.0",
     "@types/marked": "^4.0.7",
     "@types/mime-types": "^2.1.1",
@@ -44,6 +46,7 @@
     "@types/object-path": "^0.11.4",
     "@types/qs": "^6.9.11",
     "@types/xmldom": "^0.1.31",
+    "@types/youtube-player": "^5.5.11",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
     "eslint": "^8.16.0",
@@ -69,6 +72,23 @@
     "@iwsio/json-csv-core": "^1.1.4",
     "@monaco-editor/loader": "^1.4.0",
     "@tanstack/svelte-table": "^8.20.5",
+    "@tiptap/core": "^2.10.3",
+    "@tiptap/extension-bubble-menu": "^2.10.3",
+    "@tiptap/extension-character-count": "^2.10.3",
+    "@tiptap/extension-collaboration": "^2.10.3",
+    "@tiptap/extension-collaboration-cursor": "^2.10.3",
+    "@tiptap/extension-document": "^2.10.3",
+    "@tiptap/extension-font-family": "^2.10.3",
+    "@tiptap/extension-link": "^2.10.3",
+    "@tiptap/extension-paragraph": "^2.10.3",
+    "@tiptap/extension-table": "^2.10.3",
+    "@tiptap/extension-table-cell": "^2.10.3",
+    "@tiptap/extension-table-header": "^2.10.3",
+    "@tiptap/extension-table-row": "^2.10.3",
+    "@tiptap/extension-text": "^2.10.3",
+    "@tiptap/extension-text-style": "^2.10.3",
+    "@tiptap/extension-underline": "^2.10.3",
+    "@tiptap/starter-kit": "^2.10.3",
     "array-differences": "^3.0.2",
     "awesome-debounce-promise": "^2.1.0",
     "blocks-html-renderer": "^1.0.4",
@@ -80,9 +100,11 @@
     "eslint-plugin-svelte": "^2.43.0",
     "flatten-anything": "^3.0.5",
     "fluent-svelte": "^1.6.0",
+    "iframe-resizer": "^5.3.2",
     "is-what": "^5.0.2",
     "isomorphic-dompurify": "2.16.0",
     "jwt-decode": "^4.0.0",
+    "less": "^4.2.1",
     "luxon": "^3.1.0",
     "marked": "^4.2.2",
     "merge-anything": "^6.0.2",
@@ -97,11 +119,16 @@
     "remark-parse": "^11.0.0",
     "remark-rehype": "^11.1.1",
     "rrule": "^2.7.1",
+    "scroll-into-view-if-needed": "^3.1.0",
     "svelte-dnd-action": "^0.9.52",
     "svelte-kit-cookie-session": "^3.2.2",
+    "svelte-tiptap": "^1.1.3",
     "undici": "^6.19.8",
     "unified": "^11.0.5",
     "xmldom": "^0.6.0",
+    "y-webrtc": "^10.3.0",
+    "yjs": "^13.6.20",
+    "youtube-player": "^5.6.0",
     "zod": "^3.19.1"
   }
 }
