--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "@types/nprogress": "^0.2.0",
     "@types/object-path": "^0.11.4",
     "@types/qs": "^6.9.11",
+    "@types/react": "^19.0.2",
+    "@types/react-dom": "^19.0.2",
     "@types/xmldom": "^0.1.31",
     "@types/youtube-player": "^5.5.11",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
@@ -55,6 +57,8 @@
     "mongoose": "^8.8.1",
     "prettier": "^3.3.3",
     "prettier-plugin-svelte": "^3.2.6",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "smui-theme": "^7.0.0",
     "svelte": "^4.0.0",
     "svelte-check": "^3.4.3",
@@ -92,6 +96,7 @@
     "array-differences": "^3.0.2",
     "awesome-debounce-promise": "^2.1.0",
     "blocks-html-renderer": "^1.0.4",
+    "boring-avatars": "^1.11.2",
     "color": "^4.2.3",
     "color-hash": "^2.0.2",
     "copy-anything": "^3.0.5",
