chore(build): switch to adapter-vercel

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@smui/tab": "^7.0.0",
     "@smui/tab-bar": "^7.0.0",
     "@smui/textfield": "^7.0.0",
-    "@sveltejs/adapter-auto": "^3.0.0",
+    "@sveltejs/adapter-vercel": "^5.5.3",
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
     "@tsconfig/svelte": "^5.0.2",
